--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 TELEGRAM_BOT_TOKEN = 6315963080:AAFBMywMrdpxOkcmAqx_YHgaXu_oWHklFAU
-MONGODB_URI = mongodb://localhost:27017/db_ra
+MONGODB_URI = mongodb://127.0.0.1:27017/db_ra
