--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.gitignore
 
 # Директории IDE и редакторов
 .idea
