--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Necodim",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
