--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "ip": "^2.0.1",
     "mongoose": "^8.3.0",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.65.1"
   }
 }
